Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3893

Impala-shell prints incorrect address for coordinator

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.7.0
    • Impala 2.7.0
    • Clients

    Description

      When running impala-shell on local coordinator the incorrect IP address is printed.
      Host name is more likely to work

      Fetched 0 row(s) in 0.07s
      Query: insert overwrite table customer select * from tpcds_10000_text.customer
      Query submitted at: 2016-07-20 18:41:33 (Coordinator: http://0.0.0.0:25000)
      Query progress can be monitored at: http://0.0.0.0:25000/query_plan?query_id=4746846e5fd0ea34:12390b0794aa9893
      Inserted 65000000 row(s) in 15.80s
      Query: drop table if exists customer_address
      Query submitted at: 2016-07-20 18:41:48 (Coordinator: http://0.0.0.0:25000)
      Query progress can be monitored at: http://0.0.0.0:25000/query_plan?query_id=1f46697924d5b51b:c1528b654683d83
      Query: create table customer_address like tpcds_10000_text.customer_address stored as parquetfile
      Query submitted at: 2016-07-20 18:41:48 (Coordinator: http://0.0.0.0:25000)
      Query progress can be monitored at: http://0.0.0.0:25000/query_plan?query_id=3a4b0d39b143dbb3:1f4ffbedc85b381
      

      Verbose output can't be disabled and it is on default

        -V, --verbose         Verbose output [default: True]
      
      impala-shell -c -i d2401 --verbose=false
      Usage: impala_shell.py [options]
      
      impala_shell.py: error: --verbose option does not take a value
      

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            sailesh Sailesh Mukil
            mmokhtar Mostafa Mokhtar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment