common/thrift/ImpalaService.thrift
@@ -251,9 +251,6 @@ struct TPingImpalaServiceResp {
 
   // The Impalad's webserver address.
   2: string webserver_address
-
-  // The Impalad's server time.
-  3: i64 epoch_time
 }
 
 // Parameters for a ResetTable request which will invalidate a table's metadata.
